# Linara-Terminal

./: .gitignore  Cargo.toml  SMART_SUGGESTIONS_README.md  build.sh
src/: ai_assistant.rs  main.rs
