[package]
name = "terminal-app"
version = "0.1.0"
edition = "2021"
authors = ["Terminal App Developer"]
description = "A cross-platform terminal emulator built with Rust and egui"
license = "MIT"
keywords = ["terminal", "emulator", "gui", "rust", "egui"]
categories = ["command-line-utilities", "gui"]

[dependencies]
eframe = "0.28"
egui = "0.28"
portable-pty = "0.8"
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
anyhow = "1.0"
fastrand = "2.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
